Falta validacion de edad, y mejorar diseño cuando es oscuro o claro

--- a/login.html
+++ b/login.html
@@ -26,6 +26,8 @@
     <main>
         <form>
             <div class="form-fields">
+                <img id="userImage" alt="Imagen del usuario" />
+                <input type="username" class="form-control mb-3" placeholder="Usuario" required name="username" id="username">
                 <input type="email" class="form-control mb-3" placeholder="Correo Electrónico" required name="email" id="email">
                 <input type="password" class="form-control mb-3" placeholder="Contraseña" required name="password" id="password">
             </div>
